[tool.poetry]
name = "celtardy-ama"
version = "0.1.0"
description = "A clone of that game using Textualize"
authors = [
    "Joshua Armaine Gilo <joshua_gilo@dlsu.edu.ph>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
textual = ">=1.0.0,<2.0.0"
art = "^6.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
